added structure support for maintaining source metadata on writes/reads. addedquery-based uri dereferencing. queries don't resolve to the obj referred to be the uri, but to metadata associated with the uri -- e.g. source, subscriptions, timestamp, acl, etc.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -112,7 +112,7 @@ IF (BUILD_TESTS)
     IF (BUILD_MQTT_TESTS)
         MAKE_TESTS(structure/stype/mqtt "test_mqtt" , true)
     ENDIF ()
-    MAKE_TESTS(. "test_furi" false)
+    MAKE_TESTS(. "test_main;test_furi" false)
     MAKE_TESTS(model "test_fs" true)
     MAKE_TESTS(util "test_mutex" true)
     MESSAGE(STATUS "Total tests produced: ${.g}${TOTAL}${..}")
