esp mqtt actor connected. hit the ESP32 program memory limit. no likey.

--- a/platformio.ini
+++ b/platformio.ini
@@ -73,23 +73,22 @@ esp32.s3 = esp32s3box
 [env]
 framework = arduino
 board_build.filesystem = littlefs
-fs_mount_src = src/model/common.mmadt
-fs_mount_dst = data/fs/model/
+#fs_mount_src = mmadt/common.mmadt
+#fs_mount_dst = data/fs/model/
 test_framework = unity
 extra_scripts =
     pre:scripts/environment.py
-    pre:scripts/fs_mount.py
+    # pre:scripts/fs_mount.py
 lib_deps =
-    WiFi # necessary for ESPTelnet
-    ArduinoOTA
-    Update
-    ESPmDNS
+    # WiFi # necessary for ESPTelnet
+    #ArduinoOTA
+    #Update
+    #ESPmDNS
     FS
     LittleFS
-    bblanchon/ArduinoJson@^7.0.3
     knolleary/PubSubClient@^2.8
-    dvarrel/ESPping@^1.0.4
-    lennarthennigs/ESP Telnet@^2.2.1
+    # dvarrel/ESPping@^1.0.4
+    # lennarthennigs/ESP Telnet@^2.2.1
 extends = serial # or ota
 
 [serial]
