--- a/conf/mosquitto.conf
+++ b/conf/mosquitto.conf
@@ -232,6 +232,7 @@
 #
 # listener port-number [ip address/host name/unix socket path]
 listener 1883 localhost
+# localhost
 
 # By default, a listener will attempt to listen on all supported IP protocol
 # versions. If you do not have an IPv4 or IPv6 interface you may wish to
