added partition support for ESP32 to define how the chips memory is distributed amongst instructions, heap, file system, etc. added Memory actor whose URI structure is the memory makeup of the CPU.

--- a/platformio.ini
+++ b/platformio.ini
@@ -26,6 +26,7 @@ build_flags =
 [esp32]
 platform = espressif32
 board = ${boards.esp32.d1_mini} # ${boards.esp32.s3}
+board_build.partitions = partition/large_code.csv
 board_build.flash_mode = qio
 upload_flags = --no-stub
 upload_speed = 921600
@@ -41,6 +42,7 @@ build_unflags =
 build_flags =
     ${common.build_flags}
     -std=gnu++2a
+    -DFOS_LOGGING=LOG_TYPE::NONE
 
 
 [esp8266]
