mqtt esp32 as a distributed memory working. tested across chips + linux and mac FhatOS boots. Shit is slick.

--- a/conf/mosquitto.conf
+++ b/conf/mosquitto.conf
@@ -231,7 +231,7 @@
 # listener 0 /tmp/mosquitto.sock
 #
 # listener port-number [ip address/host name/unix socket path]
-listener 1883 localhost
+listener 1883
 # localhost
 
 # By default, a listener will attempt to listen on all supported IP protocol
