--- a/platformio.ini
+++ b/platformio.ini
@@ -83,9 +83,9 @@ extra_scripts =
     # pre:scripts/fs_mount.py
 lib_deps =
     # WiFi # necessary for ESPTelnet
-    #ArduinoOTA
-    #Update
-    #ESPmDNS
+    ArduinoOTA
+    Update
+    ESPmDNS
     FS
     LittleFS
     knolleary/PubSubClient@^2.8
