cleaning up minor nothings.

--- a/platformio.ini
+++ b/platformio.ini
@@ -82,7 +82,7 @@ extra_scripts =
     pre:scripts/environment.py
     # pre:scripts/fs_mount.py
 lib_deps =
-    # WiFi # necessary for ESPTelnet
+    WiFi
     ArduinoOTA
     Update
     ESPmDNS
