reworked URIs for kernel processes. less verbose. flatter. got esp32 LittleFS back into play.

--- a/platformio.ini
+++ b/platformio.ini
@@ -42,8 +42,7 @@ build_unflags =
 build_flags =
     ${common.build_flags}
     -std=gnu++2a
-    -DFOS_LOGGING=LOG_TYPE::NONE
-
+    #-DFOS_LOGGING=LOG_TYPE::NONE
 
 [esp8266]
 platform = espressif8266
