3 days of work here. ESP flash partitions can be set via fhat-dev shell. Subscriptions now operate solely on bcode. If a lambda is provided, it is wrapped in a lambda() inst. Lots of c-style variable and function renaming. Started sys model which provides dynamic access to running processes and structures. Reworked the structure hiearchy: ephemeral, database, networked, external. added more tests to test_actors (and others).

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -118,7 +118,7 @@ IF(BUILD_NATIVE)
     TARGET_COMPILE_FEATURES(${PROJECT_NAME} PRIVATE cxx_std_20)
     ##### PRECOMPILED HEADERS #####
     SET(ROOT_SOURCE_DIR ${CMAKE_SOURCE_DIR}/src)
-    SET(HEADER_FILES "<any>;<atomic>;<deque>;<functional>;<map>;<memory>;<optional>;<queue>;<set>;<string>;<tsl/ordered_map.h>;<mqtt/async_client.h>;<libwebsockets.h>")
+    SET(HEADER_FILES "<any>;<atomic>;<deque>;<functional>;<map>;<memory>;<optional>;<queue>;<map>;<set>;<string>;<tsl/ordered_map.h>;<mqtt/async_client.h>")
     MESSAGE(STATUS "${.y}Processing precompiled headers: ${.g}${HEADER_FILES}${..}")
     TARGET_PRECOMPILE_HEADERS(${PROJECT_NAME} PUBLIC ${HEADER_FILES})
     ###############################
