--- a/platformio.ini
+++ b/platformio.ini
@@ -136,17 +136,10 @@ extends = esp32
 #test_filter =
 #    structure/test_furi
 test_ignore =
+    test_main
     structure/test_furi_boost
-    process/actor/test_actor
+    structure/stype/mqtt/test_mqtt
     model/test_fs
 build_src_filter =
     +<**/*>
     -<test/structure/test_furi_boost.cpp>
-#util/test_mutex
-#structure/test_furi
-#language/test_parser
-#language/test_fluent
-#language/test_obj
-#language/test_binary_obj
-#process/router/test_router
-#process/actor/test_actor
