reworked embedding algorithm with new fURI distinction: branch and node. enables writing to branches as the embedding and to nodes as the direct one-to-one mapping. fixed deleting retained messages in mqtt using empty payload. added hasXXX functions to fURI. added optional and inspect instructions. inspect currently only works for uri. started on swarm concept -- thikning already its not a good approach to the scheduler/router consolidation problem though.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -103,7 +103,7 @@ OPTION(BUILD_NATIVE "Build Native" ON) # ON/OFF
 IF(BUILD_NATIVE)
     SET(CMAKE_MACOSX_RPATH 1)
     MESSAGE("\n${.g}=====> ${.r}P${.y}R${.m}O${.y}C${.b}E${.m}S${.g}S${.c}I${.y}N${.r}G ${.m}N${.c}A${.g}T${.r}I${.y}V${.b}E${..}\n")
-    MESSAGE(CHECK_START "${.y}CMaking ${PROJECT_NAME} (${.r}${PLATFORM}${..}${.y})${..}")
+    MESSAGE(CHECK_START "${.y}CMaking ${PROJECT_NAME} (${.r}${PLATFORM}${..}${.y})${..} (${.y}-D${.g}NATIVE${..})")
     MESSAGE(STATUS "${.y}Build type${..}: ${.g}${CMAKE_BUILD_TYPE}${..}")
     INCLUDE_DIRECTORIES(src)
     ADD_EXECUTABLE(${PROJECT_NAME} ${SOURCE_FILES})
@@ -131,10 +131,10 @@ IF(BUILD_NATIVE)
     OPTION(SANITIZE "Address Sanitizer" OFF)
     IF(CMAKE_BUILD_TYPE MATCHES "DEBUG")
         IF(SANITIZER)
-            MESSAGE(STATUS "${.m}.${.r}-${.y}= ${.g}Using Address Sanitizer ${.y}(${.g}-DSANITIZER=ON${.y}) =${.r}-${.m}.${..}")
+            MESSAGE(STATUS "${.m}.${.r}-${.y}= ${.g}Using Address Sanitizer ${.c}(${.y}-D${.g}SANITIZER${.y}=${.g}ON${.c}) =${.r}-${.m}.${..}")
             SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fsanitize=address -O1 -fno-omit-frame-pointer -g")
         ELSE()
-            MESSAGE(STATUS "${.m}.${.g}-${.y}= ${.r}NOT Using Address Sanitizer ${.y}(${.g}-DSANITIZER=OFF${.y}) =${.g}-${.m}.${..}")
+            MESSAGE(STATUS "${.m}.${.g}-${.y}= ${.r}NOT Using Address Sanitizer ${.y}(${.y}-D${.g}SANITIZER${.y}=${.g}OFF${.c}) =${.g}-${.m}.${..}")
         ENDIF()
     ENDIF()
     MESSAGE(CHECK_PASS "[${.g}COMPLETE${..}]")
