--- a/platformio.ini
+++ b/platformio.ini
@@ -20,7 +20,6 @@ build_flags =
     -DFOS_SERIAL_BAUDRATE=${this.monitor_speed}
     -DUNITY_OUTPUT_COLOR
     -DUNITY_INCLUDE_PRINT_FORMATTED
-    -Wno-ambiguous-reversed-operator
     -I build/_deps/ordered_map-src/include/
 
 [esp32]
@@ -28,6 +27,7 @@ platform = espressif32
 board = ${boards.esp32.d1_mini} # ${boards.esp32.s3}
 board_build.partitions = partition/large_code.csv
 board_build.flash_mode = qio
+# board_build.arduino.memory_type = qio_spi
 upload_flags = --no-stub
 upload_speed = 921600
 test_speed = ${this.monitor_speed}
@@ -42,6 +42,8 @@ build_unflags =
 build_flags =
     ${common.build_flags}
     -std=gnu++2a
+    -DBOARD_HAS_PSRAM
+    -mfix-esp32-psram-cache-issue
     #-DFOS_LOGGING=LOG_TYPE::NONE
 
 [esp8266]
