tweak to github action.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -94,7 +94,7 @@ IF(CHECK_INTERNET)
     ENDIF()
     MESSAGE(CHECK_PASS "[${.g}COMPLETE${..}]")
 ELSE()
-    SET(FETCHCONTENT_FULLY_DISCONNECTED ON)
+    SET(FETCHCONTENT_FULLY_DISCONNECTED OFF)
 ENDIF()
 ##################################
 
