--- a/platformio.ini
+++ b/platformio.ini
@@ -24,7 +24,7 @@ build_flags =
 
 [esp32]
 platform = espressif32
-board = ${boards.esp32.d1_mini} # ${boards.esp32.s3}
+board = ${boards.esp32.d1_mini}
 board_build.partitions = partition/large_code.csv
 board_build.flash_mode = qio
 # board_build.arduino.memory_type = qio_spi
