working getting PSRAM working with a custom allocator to offload some of the static memory to an auxiliary system. Getting very close. Reworked the structure API such that read_raw_pairs and write_raw_pairs are the only two functions required by of a custom structure. went through an fixed a 'doubling of obj' faux paux I realized around make_shared.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -128,7 +128,7 @@ IF(BUILD_NATIVE)
     ADD_DEFINITIONS("-DNATIVE")
     FILE(MAKE_DIRECTORY ${CMAKE_BINARY_DIR}/include)
     INCLUDE_DIRECTORIES(${CMAKE_BINARY_DIR}/include)
-    OPTION(SANITIZE "Address Sanitizer" OFF)
+    OPTION(SANITIZER "Address Sanitizer" OFF)
     IF(CMAKE_BUILD_TYPE MATCHES "DEBUG")
         IF(SANITIZER)
             MESSAGE(STATUS "${.m}.${.r}-${.y}= ${.g}Using Address Sanitizer ${.c}(${.y}-D${.g}SANITIZER${.y}=${.g}ON${.c}) =${.r}-${.m}.${..}")
