--- a/platformio.ini
+++ b/platformio.ini
@@ -27,11 +27,17 @@ platform = espressif32
 board = ${boards.esp32.d1_mini}
 board_build.partitions = partition/large_code.csv
 board_build.flash_mode = qio
-# board_build.arduino.memory_type = qio_spi
+#board_build.arduino.memory_type = qspi_opi
+# board_build.arduino.prsam_type = qio
+#board_build.arduino.memory_type: qio_opi
+# board_upload.maximum_ram_size: 524288
+# board_build.arduino.memory_type = qio_qspi
 upload_flags = --no-stub
 upload_speed = 921600
 test_speed = ${this.monitor_speed}
 monitor_speed = ${common.monitor_speed}
+#monitor_rts = 1
+#monitor_dtr = 1
 monitor_filters =
     ${env.monitor_filters}
     esp32_exception_decoder
@@ -42,8 +48,10 @@ build_unflags =
 build_flags =
     ${common.build_flags}
     -std=gnu++2a
-    -DBOARD_HAS_PSRAM
-    -mfix-esp32-psram-cache-issue
+    #-DBOARD_HAS_PSRAM
+    #-mfix-esp32-psram-cache-issue
+    #-DARDUINO_USB_CDC_ON_BOOT=1
+    #-DARDUINO_USB_MODE=1
     #-DFOS_LOGGING=LOG_TYPE::NONE
 
 [esp8266]
@@ -67,7 +75,9 @@ esp8266.nodemcuv2 = nodemcuv2
 esp32.d1_mini = wemos_d1_mini32
 esp32.c3_super_mini = seeed_xiao_esp32c3
 esp32.s2 = esp32s2box
+esp32.s2_mini = lolin_s2_mini
 esp32.s3 = esp32s3box
+esp32.s3_mini = esp32-s3-devkitc-1
 
 ######################################
 ########## ROOT ENVIRONMENT ##########
@@ -90,6 +100,7 @@ lib_deps =
     FS
     LittleFS
     knolleary/PubSubClient@^2.8
+    git@github.com:abaskin/virtmem.git
     # dvarrel/ESPping@^1.0.4
     # lennarthennigs/ESP Telnet@^2.2.1
 extends = serial # or ota
