added support for accessing current executing process (thread, corotine, and or fiber). Starting to make a distinction between a structures transport layer (mqtt, in-memory, file system, etc.) and its semantics (type, parser, etc.). For now, Type can be dynamnamically configured with different transports. Fixed a bug in furi.query(). Subscription source is now dynamically determined via current thread.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -55,12 +55,15 @@ MESSAGE("${.r}            PhaseShift Studio Presents \n"
 IF(WIN32)
     SET(PLATFORM "WIN32")
     MESSAGE(NOTICE "${.r}https://cmake.org/cmake/help/latest/variable/WIN32.html?highlight=win32${..}")
+    ADD_DEFINITIONS("-DWIN32")
 ELSEIF(APPLE)
     SET(PLATFORM "APPLE")
     MESSAGE(NOTICE "${.y}https://cmake.org/cmake/help/latest/variable/APPLE.html?highlight=apple${..}")
+    ADD_DEFINITIONS("-DAPPLE")
 ELSEIF(LINUX)
     SET(PLATFORM "LINUX")
     MESSAGE(NOTICE "${.g}https://cmake.org/cmake/help/latest/variable/LINUX.html?highlight=linux${..}")
+    ADD_DEFINITIONS("-DLINUX")
 ENDIF()
 ## PARALLELISM LEVEL (HARDCODED TO 8)
 SET(CMAKE_BUILD_PARALLEL_LEVEL 8)
