--- a/platformio.ini
+++ b/platformio.ini
@@ -48,11 +48,22 @@ build_unflags =
 build_flags =
     ${common.build_flags}
     -std=gnu++2a
-    #-DBOARD_HAS_PSRAM
-    #-mfix-esp32-psram-cache-issue
-    #-DARDUINO_USB_CDC_ON_BOOT=1
-    #-DARDUINO_USB_MODE=1
-    #-DFOS_LOGGING=LOG_TYPE::NONE
+    -DCONFIG_ESP_WIFI_ENTERPRISE_SUPPORT=0
+    -DCONFIG_ESP_WIFI_SOFTAP_SUPPORT=0
+    -DCONFIG_ESP_WIFI_ENABLE_WPA3_SAE=0
+    -DCONFIG_ADC_CAL_EFUSE_TP_ENABLE=0
+    -DCONFIG_ADC_CAL_EFUSE_VREF_ENABLE=0
+    -DCONFIG_ADC_CAL_LUT_ENABLE=0
+    -DCONFIG_LWIP_IPV6=0
+    -DCONFIG_FREERTOS_WATCHPOINT_END_OF_STACK=0
+    -DCONFIG_FREERTOS_CHECK_STACKOVERFLOW=0
+    -DCONFIG_ESP_MAIN_TASK_STACK_SIZE=500
+#-DBOARD_HAS_PSRAM
+#-mfix-esp32-psram-cache-issue
+#-DARDUINO_USB_CDC_ON_BOOT=1
+#-DARDUINO_USB_MODE=1
+#-DFOS_LOGGING=LOG_TYPE::NONE
+
 
 [esp8266]
 platform = espressif8266
@@ -91,7 +102,7 @@ board_build.filesystem = littlefs
 test_framework = unity
 extra_scripts =
     pre:scripts/environment.py
-    # pre:scripts/fs_mount.py
+# pre:scripts/fs_mount.py
 lib_deps =
     WiFi
     ArduinoOTA
@@ -101,8 +112,8 @@ lib_deps =
     LittleFS
     knolleary/PubSubClient@^2.8
     git@github.com:abaskin/virtmem.git
-    # dvarrel/ESPping@^1.0.4
-    # lennarthennigs/ESP Telnet@^2.2.1
+# dvarrel/ESPping@^1.0.4
+# lennarthennigs/ESP Telnet@^2.2.1
 extends = serial # or ota
 
 [serial]
