split out interrupt pins as another structure. added rand() instruction for random bool, int, and real generation.

--- a/platformio.ini
+++ b/platformio.ini
@@ -64,6 +64,24 @@ build_flags =
 #-DARDUINO_USB_MODE=1
 #-DFOS_LOGGING=LOG_TYPE::NONE
 
+[esp32-s3]
+platform = espressif32
+board = esp32-s3-devkitc1-n16r8
+upload_flags = --no-stub
+upload_speed = 921600
+test_speed = ${this.monitor_speed}
+monitor_speed = ${common.monitor_speed}
+monitor_filters =
+    ${env.monitor_filters}
+    esp32_exception_decoder
+lib_ignore =
+    ESP8266Scheduler
+build_unflags =
+    ${common.build_unflags}
+build_flags =
+    ${common.build_flags}
+    -std=gnu++2a
+
 
 [esp8266]
 platform = espressif8266
