centralized both structure and process creating and destruction in respective INTERCEPTS. Got new Lilygo board with 8mb/16mb working. Very nice as memory is no longer an issue. Various cleanups.

--- a/platformio.ini
+++ b/platformio.ini
@@ -6,6 +6,7 @@
 name = FhatOS
 description = A Distributed Operating System for ESP32 and ESP8266 Microcontrollers
 extra_configs = .wifi.ini
+boards_dir = boards
 
 ######################################
 ##### ESP32/8266 MICROPROCESSORS #####
@@ -66,11 +67,12 @@ build_flags =
 
 [esp32-s3]
 platform = espressif32
-board = esp32-s3-devkitc1-n16r8
-upload_flags = --no-stub
+board = lilygo-t7-s3
+#upload_flags = --no-stub
 upload_speed = 921600
 test_speed = ${this.monitor_speed}
 monitor_speed = ${common.monitor_speed}
+#board_build.arduino.memory_type = qio_opi
 monitor_filters =
     ${env.monitor_filters}
     esp32_exception_decoder
@@ -81,6 +83,18 @@ build_unflags =
 build_flags =
     ${common.build_flags}
     -std=gnu++2a
+    -DARDUINO_USB_CDC_ON_BOOT=1
+    #-DBOARD_HAS_PSRAM
+    #-DCONFIG_ESP_WIFI_ENTERPRISE_SUPPORT=0
+    #-DCONFIG_ESP_WIFI_SOFTAP_SUPPORT=0
+    #-DCONFIG_ESP_WIFI_ENABLE_WPA3_SAE=0
+    #-DCONFIG_ADC_CAL_EFUSE_TP_ENABLE=0
+    #-DCONFIG_ADC_CAL_EFUSE_VREF_ENABLE=0
+    #-DCONFIG_ADC_CAL_LUT_ENABLE=0
+    #-DCONFIG_LWIP_IPV6=0
+    #-DCONFIG_FREERTOS_WATCHPOINT_END_OF_STACK=0
+    #-DCONFIG_FREERTOS_CHECK_STACKOVERFLOW=0
+    #-DCONFIG_ESP_MAIN_TASK_STACK_SIZE=250
 
 
 [esp8266]
@@ -174,7 +188,7 @@ test_ignore =
 ################## ESP32 ##################
 ###########################################
 [env:esp32]
-extends = esp32
+extends = esp32-s3
 #test_filter =
 #    structure/test_furi
 test_ignore =
