removed test suite dependency on fluent. thinking fluent will go away as its not worth maintaining at this point in the game. will harvest it's test cases over to parser. removed QoS from subscriptions. MQTT implementations are hardcoded to QoS of 1. Simplifies code, reduces memory footprint. Over time, can reintroduce. MQTT serializers include retain information as not all MQTT clients expose that information. Reworked progress_bar implementaiton -- much cleaner and easier to use. Also was able to remove cursor draw during progress -- removes jarring eye effect. Lots of work on both ESP32 and Linux/MacOSX FileSystem implementaitons. Coming to a new realization of how write/read should work with respects to nodes vs. branches and ids vs. patterns. Fixed a long standing bug around shutting down fiber threads.

--- a/platformio.ini
+++ b/platformio.ini
@@ -72,7 +72,6 @@ board = lilygo-t7-s3
 upload_speed = 921600
 test_speed = ${this.monitor_speed}
 monitor_speed = ${common.monitor_speed}
-#board_build.arduino.memory_type = qio_opi
 monitor_filters =
     ${env.monitor_filters}
     esp32_exception_decoder
@@ -84,17 +83,20 @@ build_flags =
     ${common.build_flags}
     -std=gnu++2a
     -DARDUINO_USB_CDC_ON_BOOT=1
-    #-DBOARD_HAS_PSRAM
-    #-DCONFIG_ESP_WIFI_ENTERPRISE_SUPPORT=0
-    #-DCONFIG_ESP_WIFI_SOFTAP_SUPPORT=0
-    #-DCONFIG_ESP_WIFI_ENABLE_WPA3_SAE=0
-    #-DCONFIG_ADC_CAL_EFUSE_TP_ENABLE=0
-    #-DCONFIG_ADC_CAL_EFUSE_VREF_ENABLE=0
-    #-DCONFIG_ADC_CAL_LUT_ENABLE=0
-    #-DCONFIG_LWIP_IPV6=0
-    #-DCONFIG_FREERTOS_WATCHPOINT_END_OF_STACK=0
-    #-DCONFIG_FREERTOS_CHECK_STACKOVERFLOW=0
-    #-DCONFIG_ESP_MAIN_TASK_STACK_SIZE=250
+    -DSPIRAM_USE_MALLOC=1
+    -DCONFIG_WIFI_LWIP_ALLOCATION_FROM_SPIRAM_FIRST=1
+    -DCONFIG_ESP_WIFI_ENTERPRISE_SUPPORT=0
+    -DCONFIG_ESP_WIFI_SOFTAP_SUPPORT=0
+    -DCONFIG_ESP_WIFI_ENABLE_WPA3_SAE=0
+    -DCONFIG_ADC_CAL_EFUSE_TP_ENABLE=0
+    -DCONFIG_ADC_CAL_EFUSE_VREF_ENABLE=0
+    -DCONFIG_ADC_CAL_LUT_ENABLE=0
+    -DCONFIG_LWIP_IPV6=0
+    -DCONFIG_FREERTOS_WATCHPOINT_END_OF_STACK=0
+    -DCONFIG_FREERTOS_CHECK_STACKOVERFLOW=0
+    -DCONFIG_ESP_MAIN_TASK_STACK_SIZE=4096
+    ### FHATOS-SPECIFIC CONFIGURATION
+    -DFOS_EXTERNAL_MEMORY_LIMIT=128
 
 
 [esp8266]
