--- a/platformio.ini
+++ b/platformio.ini
@@ -84,6 +84,9 @@ build_flags =
     -std=gnu++2a
     -DARDUINO_USB_CDC_ON_BOOT=1
     -DSPIRAM_USE_MALLOC=1
+    -DCONFIG_SPIRAM_USE=1
+     # default 4096 (set to the same value as FOS_EXTERNAL_MEMORY_LIMIT)
+    -DCONFIG_SPIRAM_MALLOC_ALWAYSINTERNAL=4
     -DCONFIG_WIFI_LWIP_ALLOCATION_FROM_SPIRAM_FIRST=1
     -DCONFIG_ESP_WIFI_ENTERPRISE_SUPPORT=0
     -DCONFIG_ESP_WIFI_SOFTAP_SUPPORT=0
@@ -94,10 +97,10 @@ build_flags =
     -DCONFIG_LWIP_IPV6=0
     -DCONFIG_FREERTOS_WATCHPOINT_END_OF_STACK=0
     -DCONFIG_FREERTOS_CHECK_STACKOVERFLOW=0
-    -DCONFIG_ESP_MAIN_TASK_STACK_SIZE=16384
-    -DSET_LOOP_TASK_STACK_SIZE=16384
+    -DCONFIG_ESP_MAIN_TASK_STACK_SIZE=32768
+    -DSET_LOOP_TASK_STACK_SIZE=32768
     ### FHATOS-SPECIFIC CONFIGURATION
-    -DFOS_EXTERNAL_MEMORY_LIMIT=128
+    -DFOS_EXTERNAL_MEMORY_LIMIT=4
 
 
 [esp8266]
