added support for Bluetooth low energy (BLE). Basically BLE protocol is in one to one coresspondence with FhatOS structures. Thus, bluetooth serves as a transport protocol and useful when memory hungry WiFi can be avoided.

--- a/platformio.ini
+++ b/platformio.ini
@@ -99,6 +99,17 @@ build_flags =
     -DCONFIG_FREERTOS_CHECK_STACKOVERFLOW=0
     -DCONFIG_ESP_MAIN_TASK_STACK_SIZE=32768
     -DSET_LOOP_TASK_STACK_SIZE=32768
+    ### BLUETOOTH
+    #-DCONFIG_CLASSIC_BT_ENABLED=y
+    #-DCONFIG_BT_ENABLED=y
+    -DCONFIG_BT_SPP_ENABLED=1
+    #-DCONFIG_BTDM_CTRL_MODE_BLE_ONLY=0
+    #-DCONFIG_BTDM_CTRL_MODE_BR_EDR_ONLY=1
+    #-DCONFIG_BTDM_CTRL_MODE_BTDM=0
+    -DCONFIG_BT_BLUEDROID_ENABLED=1
+    #-DCONFIG_BT_BLE_ENABLED=0
+    -DCONFIG_BT_ENABLED=1
+    -DCONFIG_BT_CLASSIC_ENABLED=1
     ### FHATOS-SPECIFIC CONFIGURATION
     -DFOS_EXTERNAL_MEMORY_LIMIT=4
 
