wifi client name and mqtt client name can now be set via command line arguments or -D definition of FOS_MACHINE_NAME.

--- a/platformio.ini
+++ b/platformio.ini
@@ -68,7 +68,7 @@ build_flags =
 [esp32-s3]
 platform = espressif32
 board = lilygo-t7-s3
-#upload_flags = --no-stub
+# upload_flags = --no-stub
 upload_speed = 921600
 test_speed = ${this.monitor_speed}
 monitor_speed = ${common.monitor_speed}
@@ -97,22 +97,29 @@ build_flags =
     -DCONFIG_LWIP_IPV6=0
     -DCONFIG_FREERTOS_WATCHPOINT_END_OF_STACK=0
     -DCONFIG_FREERTOS_CHECK_STACKOVERFLOW=0
-    -DCONFIG_ESP_MAIN_TASK_STACK_SIZE=32768
-    -DSET_LOOP_TASK_STACK_SIZE=32768
-    ### BLUETOOTH
+    -DCONFIG_ESP_MAIN_TASK_STACK_SIZE=65536
+    # default 32768
+    -DSET_LOOP_TASK_STACK_SIZE=65536
+    ###############################
+    ### BLUETOOTH CONFIGURATION ###
+    ###############################
     #-DCONFIG_CLASSIC_BT_ENABLED=y
     #-DCONFIG_BT_ENABLED=y
-    -DCONFIG_BT_SPP_ENABLED=1
     #-DCONFIG_BTDM_CTRL_MODE_BLE_ONLY=0
     #-DCONFIG_BTDM_CTRL_MODE_BR_EDR_ONLY=1
     #-DCONFIG_BTDM_CTRL_MODE_BTDM=0
-    -DCONFIG_BT_BLUEDROID_ENABLED=1
     #-DCONFIG_BT_BLE_ENABLED=0
+    -DCONFIG_BT_SPP_ENABLED=1
+    -DCONFIG_BT_BLUEDROID_ENABLED=1
     -DCONFIG_BT_ENABLED=1
     -DCONFIG_BT_CLASSIC_ENABLED=1
-    ### FHATOS-SPECIFIC CONFIGURATION
+    #####################################
+    ### FHATOS-SPECIFIC CONFIGURATION ###
+    #####################################
     -DFOS_EXTERNAL_MEMORY_LIMIT=4
-
+    -DFOS_ESP_THREAD_STACK_SIZE=25000
+    -DFOS_ESP_FIBER_STACK_SIZE=20000
+    -DFOS_MACHINE_NAME=fhatos_esp
 
 [esp8266]
 platform = espressif8266
