wasted a whole day on cmake build crap with paho mqtt... that project's build is a mess.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -187,10 +187,6 @@ MESSAGE(CHECK_PASS "[${.g}COMPLETE${..}]")
 ####################################
 ### MQTT: MQTT NETWORK PROTOCOL IMPLEMENTATION
 #################################### C
-#FILE(GLOB_RECURSE PROJECT_SRCS "src/*.c" "src/*.cpp" "include/*.h")
-#SET(PAHO_BUILD_STATIC TRUE)
-#SET(PAHO_BUILD_WITH_SSL FALSE)
-#INCLUDE(pahomqttc.cmake)
 MESSAGE(CHECK_START "${.y}Making Paho MQTT C Library${..}")
 FETCHCONTENT_DECLARE(
         paho-mqtt3c
@@ -198,23 +194,24 @@ FETCHCONTENT_DECLARE(
         GIT_TAG v1.3.13
 )
 FETCHCONTENT_MAKEAVAILABLE(paho-mqtt3c)
-TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PUBLIC paho-mqtt3c)
+TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PRIVATE paho-mqtt3c)
 INSTALL(DIRECTORY ${CMAKE_BINARY_DIR}/_deps/paho-mqtt3c-src/include/mqtt DESTINATION ${CMAKE_INSTALL_PREFIX}/include/mqtt)
 INSTALL(DIRECTORY ${CMAKE_BINARY_DIR}/_deps/paho-mqtt3c-src/include/mqtt DESTINATION ${CMAKE_SOURCE_DIR}/include/mqtt)
 MESSAGE(CHECK_PASS "[${.g}COMPLETE${..}]")
 #################################### C++
 MESSAGE(CHECK_START "${.y}Making Paho MQTT C++ Library${..}")
-#INCLUDE(pahomqttcpp.cmake)
+OPTION(PAHO_WITH_MQTT_C TRUE)
 FETCHCONTENT_DECLARE(
         paho-mqttpp3
         GIT_REPOSITORY https://github.com/eclipse/paho.mqtt.cpp.git
         GIT_TAG v1.4.1
 )
 FETCHCONTENT_MAKEAVAILABLE(paho-mqttpp3)
+#INCLUDE(pahomqttcpp.cmake)
 TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PUBLIC paho-mqttpp3)
 INSTALL(DIRECTORY ${CMAKE_BINARY_DIR}/_deps/paho-mqttpp3-src/include DESTINATION ${CMAKE_INSTALL_PREFIX}/include/mqtt)
 INSTALL(DIRECTORY ${CMAKE_BINARY_DIR}/_deps/paho-mqttpp3-src/include DESTINATION ${CMAKE_SOURCE_DIR}/include/mqtt)
-TARGET_LINK_LIBRARIES(${PROJECT_NAME} PRIVATE paho-mqtt3c PRIVATE paho-mqttpp3)
+TARGET_LINK_LIBRARIES(${PROJECT_NAME} PRIVATE paho-mqttpp3)
 MESSAGE(CHECK_PASS "[${.g}COMPLETE${..}]")
 ####################################
 ####################################
